// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabeledInput should be rendered correctly 1`] = `
<div
  className="container root size-36 color-night700"
>
  <div
    className="uui-label-top"
  >
    <div>
      <div
        className="container uui-input-box -clickable colorSky root size-36 mode-form"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={-1}
      >
        <input
          className="uui-input line-height-18 font-size-14 v-padding-8"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LabeledInput should be rendered correctly with props 1`] = `
<div
  className="container root size-36 color-night700"
>
  <div
    className="uui-label-left"
  >
    <label
      className="uui-label"
    >
      Test label
      <SvgrURL
        className="uui-labeled-input-info-icon"
      />
    </label>
    <div
      className="rightChildrenPosition"
    >
      <div
        className="container uui-input-box -clickable colorSky root size-36 mode-form"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={-1}
      >
        <input
          className="uui-input line-height-18 font-size-14 v-padding-8"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
  <div
    className="uui-invalid-message"
    role="alert"
  >
    Test invalid message
  </div>
</div>
`;
